ingress.yaml
# Ingress config.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rust
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/default-backend: rust-service
spec:
  ingressClassName: nginx
  rules:
  - host: api.laguirre.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rust-service
            port:
              number: 80
